--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script defer src="https://walkative.bravelab.io/widget/script/2/147/" data-rocket-status="executed"></script>
+    <script defer src="http://walkative:MVaZKnBh8qT9k2dE4pG3vW@walkative.bravelab.io/widget/script/2/147/" data-rocket-status="executed"></script>
 </head>
 <body>
 
